# PiDVD

./: .gitignore  CLAUDE.md  README.md
buildroot/: Config.in  external.desc  external.mk
buildroot/board/pidvd/: cmdline-hdmi.txt  cmdline.txt  config-hdmi.txt  config.txt  genimage-pidvd.cfg  linux-extras.fragment  post-build.sh  post-image.sh
buildroot/board/pidvd/patches/linux/: 0001-drm-vc4-field-lock-vblank-sequence-on-interlaced.patch  0002-drm-vblank-no-double-interlace-halving.patch
buildroot/board/pidvd/rootfs-overlay/etc/: inittab
buildroot/board/pidvd/rootfs-overlay/etc/init.d/: S30pidvd  S40network  S45pidvd-remote  S90pidvd
buildroot/board/pidvd/rootfs-overlay/root/.ssh/: authorized_keys
buildroot/configs/: pidvd_defconfig
buildroot/package/a52dec/: Config.in  a52dec.mk
buildroot/package/pidvd-player/: Config.in  pidvd-player.mk
docker/: Dockerfile
docs/: ARCHITECTURE.md  UI.md
player/: CMakeLists.txt
player/platform/linux/: audio_alsa.c  input_evdev.c  video_kms.c
player/src/core/: disc.c  disc.h
player/src/decode/: audio_a52.c  audio_a52.h  spu.c  spu.h  video_mpeg2.c  video_mpeg2.h
player/src/demux/: ps.c  ps.h
player/src/nav/: engine.c  engine.h
player/src/platform/: platform.h
player/src/player/: main.c
player/src/present/: presenter.c  presenter.h
player/src/sync/: audio_playback.c  audio_playback.h  audio_resampler.c  audio_resampler.h  av_sync.c  av_sync.h
player/src/ui/: catalog.c  catalog.h  draw.c  draw.h  dvdlogo_data.h  font8.c  font8.h  load_anim.c  load_anim.h  picker.c  picker.h  render.c  render.h  saver.c  saver.h  settings.c  settings.h
player/tests/: av_sync_test.c
player/tools/: drmprops.c  drmset.c  dvdinfo.c  gen_asset.py  gen_dvdlogo.py  remote.c  uipreview.c
scripts/: build-image.sh  deploy.sh  remote-deploy.sh  ui-mock.sh
